--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,41 @@
+.header {
+  padding: 20px 40px;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: sans-serif;
+  box-shadow: 1px 0 8px 0 rgba(0, 0, 0, 0.66);
+  text-align: center;
+}
 
+.todo {
+  margin-top: 10px;
+  padding: 50px;
+  box-shadow: 1px 0 8px 0 rgba(0, 0, 0, 0.66);
+}
+.todo__item {
+  border-bottom: 2px solid lightgray;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+.todo__item__icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 30px;
+}
+.todo__item__status {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.form-group {
+  padding: 10px;
+}
+
+.form-control {
+  display: block;
+}
+
+.rounded {
+  border-radius: 5px;
+}
