--- a/App/Views/todo/create.twig
+++ b/App/Views/todo/create.twig
@@ -3,11 +3,21 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-
-    {% for todoItem in todoItems %}
-        * {{ todoItem.name }}
-    {% else %}
-        No todo item have been found.
-    {% endfor %}
+    <div class="header rounded">
+        Create TODO task
+    </div>
+    <form class="todo" action="/todos" method="post">
+        <div class="form-group">
+            <label>name:</label>
+            <input class="form-control" type="text" name="name">
+        </div>
+        <div class="form-group">
+            <label>priority:</label>
+            <input class="form-control" type="number" min="0" name="priority">
+        </div>
+        <div class="form-group">
+            <button type="submit">Create task</button>
+        </div>
+    </form>
 
 {% endblock %}
