--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,44 @@
-//body {
-//  background: black;
-//}
+.header {
+  padding: 20px 40px;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: sans-serif;
+  -webkit-box-shadow: 1px 0 8px 0 rgba(0, 0, 0, 0.66);
+  box-shadow: 1px 0 8px 0 rgba(0, 0, 0, 0.66);
+  text-align: center;
+}
+
+.todo {
+  margin-top: 10px;
+  padding: 50px;
+  box-shadow: 1px 0 8px 0 rgba(0, 0, 0, 0.66);
+  &__item {
+    border-bottom: 2px solid lightgray;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+
+    &__icon {
+      width: 20px;
+      height: 20px;
+      margin-right: 30px;
+    }
+
+    &__status {
+      margin-left: auto;
+      margin-right: 20px;
+    }
+  }
+}
+
+.form-group {
+  padding: 10px;
+}
+
+.form-control {
+  display: block;
+}
+
+.rounded {
+  border-radius: 5px;
+}
